# aristotelian-19860a06

./: .gitignore  LICENSE  README.md  README_PYPI.md  minimal_repro.py  prh_min.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml  release.yml
aristotelian/: __init__.py
aristotelian/experiments/: __init__.py  common.py  experiments.py  layerwise_engine.py  multiple.py  perm_budget.py  type1.py
aristotelian/metrics/: __init__.py  aggregation.py  api.py  base.py  baselines.py  calibration.py  cca.py  cka.py  estimators.py  extra_base.py  knn.py  nulls.py  other_metrics.py  registry.py  rsa.py  utils.py
aristotelian/prh/: __init__.py  alignment.py  cache.py  layers.py  paths.py  preprocess.py  prh_data.py  prh_experiment.py  prh_models.py  prh_pipeline.py  pvd_data.py  v2t_experiment.py  video_models.py
aristotelian/style/: __init__.py  apply.py  palettes.py  presets.py  tokens.py
aristotelian/utils/: logging.py
calibrated_similarity/: __init__.py  calibration.py
scripts/: __init__.py
scripts/analyses/: cka_comparison.py  cka_debiasing_comparison.py
scripts/experiments/: cli.py  metrics.py  registry.py
scripts/experiments/generators/: __init__.py  common.py  gen1.py  gen2.py  layerwise.py  low_rank.py  noise.py
scripts/experiments/infra/: __init__.py  device.py  io.py  parallel.py  stats.py
scripts/experiments/sections/: __init__.py  aggregation.py  calibration.py  null_drift.py  prh.py  snr.py
scripts/plots/: cka_comparison.py  experiments.py  references.py
scripts/validation/: prh_pipeline.py
styles/: paper.mplstyle
tests/: __init__.py
tests/aristotelian/core/: test_logging_config.py  test_metric_registry.py
tests/aristotelian/experiments/: test_batched_cka.py  test_experiment_smoke.py  test_fdr.py  test_generators.py  test_infrastructure.py  test_layerwise_engine.py  test_metric_cache.py  test_multiproc.py  test_parallel.py  test_runners.py  test_signal_layers.py  test_snr_regime.py
tests/aristotelian/integration/: test_parallel_integration.py
tests/aristotelian/metrics/: test_ablation.py  test_aggregation.py  test_api.py  test_baselines.py  test_cka.py  test_cka_estimators.py  test_extra_metrics.py  test_gated_signal.py  test_h0_calibration.py  test_metric_alignment.py  test_metrics.py  test_null_ablation.py  test_null_correctness.py  test_nulls.py  test_permutation_variants.py  test_prh_metrics.py  test_rsa_integration.py  test_sg_extra_metrics.py  test_shift.py
tests/aristotelian/plotting/: __init__.py  conftest.py  create_test_data.py  test_figure_structure.py  test_helpers.py  test_output_equivalence.py
tests/aristotelian/prh/: test_prh_cka_cache.py  test_prh_experiment.py  (+4 more)
tests/calibrated_similarity/: __init__.py  test_package.py
(+12 files in other folders)
